<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/server_header">

        <EditTextPreference
            app:key="host"
            app:title="@string/host_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="ssl"
            app:title="@string/ssl_title"
            app:defaultValue="true"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/app_header">
        <DropDownPreference
            app:key="videoQuality"
            app:title="@string/video_quality_title"
            app:defaultValue="4K"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/entries_video_quality"
            app:entryValues="@array/entry_video_quality_values"
            />

        <SwitchPreferenceCompat
            app:key="timer"
            app:title="@string/timer_title"
            app:defaultValue="true"
            />
        <SwitchPreferenceCompat
            app:key="muted"
            app:title="@string/muted_title"
            app:defaultValue="true"
            />
    </PreferenceCategory>

</PreferenceScreen>